--- a/playbooks/webapp/tasks/create_aurora_db_cluster.yaml
+++ b/playbooks/webapp/tasks/create_aurora_db_cluster.yaml
@@ -16,8 +16,8 @@
     - name: Create rds global database
       amazon.cloud.rds_global_cluster:
         global_cluster_identifier: "{{ test_global_cluster_name }}"
-        engine: "aurora-postgresql"
-        engine_version: "15.2"
+        engine: "{{ rds_engine }}"
+        engine_version: "{{ rds_engine_version }}"
         region: "{{ test_primary_cluster_region }}"
         state: present
       register: create_global_result
@@ -26,11 +26,13 @@
       amazon.aws.rds_cluster:
         global_cluster_identifier: "{{ test_global_cluster_name }}"
         db_cluster_identifier: "{{ test_primary_cluster_name }}"
+        db_name: "{{ rds_instance_name }}"
         region: "{{ test_primary_cluster_region }}"
-        engine: "aurora-postgresql"
-        engine_version: "15.2"
-        username: "{{ deploy_flask_app_rds_master_username }}"
-        password: "{{ deploy_flask_app_rds_master_password }}"
+        engine: "{{ rds_engine }}"
+        engine_version: "{{ rds_engine_version }}"
+        #enable_global_write_forwarding: True
+        master_user_password: "{{ deploy_flask_app_rds_master_password }}"
+        master_username: "{{ deploy_flask_app_rds_master_username }}"
         db_subnet_group_name: "{{ rds_subnet_group_name }}"
         vpc_security_group_ids:
           - "{{ rds_primary_sg.security_groups[0].group_id }}"
@@ -40,11 +42,9 @@
       amazon.aws.rds_instance:
         db_cluster_identifier: "{{ test_primary_cluster_name }}"
         db_instance_identifier: "{{ test_primary_cluster_name }}-instance"
-        db_name: "{{ rds_instance_name }}"
         region: "{{ test_primary_cluster_region }}"
-        engine: "aurora-postgresql"
-        db_instance_class: "{{ test_instance_class }}"
-        monitoring_interval: 0
+        engine: "{{ rds_engine }}"
+        db_instance_class: "db.r6g.large"
         skip_final_snapshot: true
 
     - name: Get primary instance info
@@ -84,9 +84,10 @@
       amazon.aws.rds_cluster:
         global_cluster_identifier: "{{ test_global_cluster_name }}"
         db_cluster_identifier: "{{ test_replica_cluster_name }}"
-        engine: "aurora-postgresql"
-        engine_version: "{{ global_cluster_info.GlobalClusters[0].EngineVersion }}" # replica cluster engine version needs to be exact same as global db engine version
         db_subnet_group_name: "{{ rds_subnet_group_name }}"
+        engine: "{{ rds_engine }}"
+        engine_version: "{{ global_cluster_info.GlobalClusters[0].EngineVersion }}" # replica cluster engine version needs to be exact same as global db engine version
+        #enable_global_write_forwarding: True
         vpc_security_group_ids:
           - "{{ rds_replica_sg.security_groups[0].group_id }}"
         region: "{{ test_replica_cluster_region }}"
@@ -96,11 +97,9 @@
       amazon.aws.rds_instance:
         db_cluster_identifier: "{{ test_replica_cluster_name }}"
         db_instance_identifier: "{{ test_replica_cluster_name }}-instance"
-        db_name: "{{ rds_instance_name }}"
         region: "{{ test_replica_cluster_region }}"
-        engine: "aurora-postgresql"
-        db_instance_class: "{{ test_instance_class }}"
-        monitoring_interval: 0
+        engine: "{{ rds_engine }}"
+        db_instance_class: "db.r6g.large"
         skip_final_snapshot: true
 
     - name: Get replica instance info
