--- a/roles/deploy_flask_app/files/run_app.yaml
+++ b/roles/deploy_flask_app/files/run_app.yaml
@@ -20,10 +20,16 @@
         - regex: ^(# *)?ClientAliveCountMax
           line: ClientAliveCountMax 3
 
+   # - name: Enable EPEL
+   #   ansible.builtin.package:
+   #     name:
+   #       - epel-release
+
     - name: Install Podman
       ansible.builtin.yum:
         name:
           - podman
+        update_cache: True
         state: present
 
     - name: Pull image from private registry
