--- a/playbooks/webapp/tasks/delete.yaml
+++ b/playbooks/webapp/tasks/delete.yaml
@@ -1,10 +1,13 @@
 ---
 - name: Delete resources playbook
+  module_defaults:
+    group/aws:
+      aws_access_key: "{{ aws_access_key | default(omit) }}"
+      aws_secret_key: "{{ aws_secret_key | default(omit) }}"
+      security_token: "{{ security_token | default(omit) }}"
+      region: "{{ region }}"
 
   block:
-    - name: Set 'region' variable
-      ansible.builtin.set_fact:
-        region: "{{ region | default(aws_region) }}"
 
     - name: Get vpc information
       amazon.aws.ec2_vpc_net_info:
@@ -25,6 +28,7 @@
               instance-type: "{{ bastion_host_type }}"
               key-name: "{{ deploy_flask_app_sshkey_pair_name }}"
               vpc-id: "{{ vpc_id }}"
+              instance-state-name: running
           register: bastion
 
         - name: Delete EC2 instances with dependant Resources
@@ -81,6 +85,7 @@
           amazon.aws.rds_subnet_group:
             name: "{{ rds_subnet_group_name }}"
             state: absent
+          ignore_errors: true
 
         - name: List Security group from VPC
           amazon.aws.ec2_security_group_info:
@@ -94,6 +99,7 @@
             state: absent
             group_id: "{{ item }}"
           with_items: "{{ secgroups.security_groups | map(attribute='group_id') | list }}"
+          ignore_errors: true
 
         - name: List routes table from VPC
           amazon.aws.ec2_vpc_route_table_info:
@@ -109,6 +115,7 @@
             lookup: id
             state: absent
           with_items: "{{ route_table.route_tables | map(attribute='id') | list }}"
+          ignore_errors: true
 
         - name: Get NAT gateway
           amazon.aws.ec2_vpc_nat_gateway_info:
@@ -122,11 +129,13 @@
             state: absent
             wait: true
           with_items: "{{ nat_gw.result | map(attribute='nat_gateway_id') | list }}"
+          ignore_errors: true
 
         - name: Delete internet gateway
           amazon.aws.ec2_vpc_igw:
             vpc_id: "{{ vpc_id }}"
             state: absent
+          ignore_errors: true
 
         - name: Delete subnets
           amazon.aws.ec2_vpc_subnet:
@@ -134,6 +143,7 @@
             state: absent
             vpc_id: "{{ vpc_id }}"
           with_items: "{{ subnet_cidr }}"
+          ignore_errors: true
 
         # As ec2_vpc_route_table can't delete route table, the vpc still has dependencies and cannot be deleted.
         # You need to do it delete it manually using either the console or the cli.
