--- a/roles/create_rds_global_cluster/tasks/delete.yml
+++ b/roles/create_rds_global_cluster/tasks/delete.yml
@@ -1,1 +1,78 @@
 ---
+- name: Run 'create_rds_global_cluster' role delete operations
+  module_defaults:
+    group/aws: "{{ aws_setup_credentials__output }}"
+
+  block:
+    - name: Get replica cluster info
+      amazon.aws.rds_cluster_info:
+        cluster_id: "{{ create_rds_global_cluster_replica_cluster_name }}"
+        region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+      register: _result_replica_cluster_info
+
+    - name: If replica cluster exists
+      block:
+        - name: Delete instance attached to replica cluster if present
+          amazon.aws.rds_instance:
+            db_instance_identifier: "{{ create_rds_global_cluster_replica_cluster_instance_name }}"
+            region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+            skip_final_snapshot: true
+            wait: false
+            state: absent
+          when: _result_replica_cluster_info.clusters[0].db_cluster_members | length >= 1
+
+        - name: Delete replica cluster without creating a final snapshot
+          amazon.aws.rds_cluster:
+            cluster_id: "{{ create_rds_global_cluster_replica_cluster_name }}"
+            region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+            global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
+            remove_from_global_db: true
+            skip_final_snapshot: True
+            state: absent
+      when: _result_replica_cluster_info.clusters | length != 0
+
+    - name: Get primary cluster info
+      amazon.aws.rds_cluster_info:
+        cluster_id: "{{ create_rds_global_cluster_primary_cluster_name }}"
+        region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+      register: _result_primary_cluster_info
+
+    - name: If primary cluster exists
+      block:
+        - name: Delete instance attached to primary cluster if present
+          amazon.aws.rds_instance:
+            db_instance_identifier: "{{ create_rds_global_cluster_primary_cluster_instance_name }}"
+            region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+            skip_final_snapshot: true
+            wait: false
+            state: absent
+          when: _result_primary_cluster_info.clusters[0].db_cluster_members | length >= 1
+
+        - name: Delete primary cluster without creating a final snapshot
+          amazon.aws.rds_cluster:
+            cluster_id: "{{ create_rds_global_cluster_primary_cluster_name }}"
+            region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+            global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
+            remove_from_global_db: true
+            skip_final_snapshot: True
+            state: absent
+      when: _result_primary_cluster_info.clusters | length != 0
+
+    - name: Delete the global cluster
+      amazon.cloud.rds_global_cluster:
+        global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
+        region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+        state: absent
+      register: _result_global_cluster_delete
+
+    - name: Print success or failure
+      debug:
+        msg:
+          - 'Global cluster {{ create_rds_global_cluster_global_cluster_name }} deleted successfully'
+      when: _result_global_cluster_delete is not failed
+
+    - name: Print success or failure
+      debug:
+        msg:
+          - 'Global cluster {{ create_rds_global_cluster_global_cluster_name }} deletion failed'
+      when: _result_global_cluster_delete is failed
