global cluster engine fix

--- a/roles/create_rds_global_cluster/tasks/create.yml
+++ b/roles/create_rds_global_cluster/tasks/create.yml
@@ -16,27 +16,26 @@
       amazon.aws.rds_cluster:
         db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name | default('{{ create_rds_global_cluster_global_cluster_name }}') }}" #aka cluster_name
         region: "{{ create_rds_global_cluster_primary_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_enigne }}"
+        engine: "{{ create_rds_global_cluster_enigne  | default('aurora-postgresql')}}"
         engine_version: "{{ create_rds_global_cluster_engine_version | default(omit) }}"
         username: "{{ create_rds_global_cluster_username }}"
         password: "{{ create_rds_global_cluster_password }}"
         db_subnet_group_name: "{{ create_rds_global_cluster_db_subnet_group_name | default(omit) }}"
         global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"  # what global db cluster should be associated to
-      ignore_errors: true
 
     - name: Create an instance connected to primary cluster
       amazon.aws.rds_instance:
         db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name }}" # what cluster instance should be in
         db_instance_identifier: "{{ create_rds_global_cluster_primary_cluster_instance_name }}"
         region: "{{ create_rds_global_cluster_primary_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_enigne }}"
+        engine: "{{ create_rds_global_cluster_enigne  | default('aurora-postgresql')}}"
         db_instance_class: "{{ create_rds_global_cluster_instance_class }}"
 
     - name: Create a read replica cluster for global database "{{ create_rds_global_cluster_global_cluster_name }}" in "{{ create_rds_global_cluster_replica_cluster_region }}"
       amazon.aws.rds_cluster:
         db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name | default('{{ create_rds_global_cluster_global_cluster_name }}') }}" #aka cluster_name
         region: "{{ create_rds_global_cluster_replica_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_enigne }}"
+        engine: "{{ create_rds_global_cluster_enigne  | default('aurora-postgresql')}}"
         engine_version: "{{ create_rds_global_cluster_engine_version | default(omit) }}"
         db_subnet_group_name: "{{ create_rds_global_cluster_db_subnet_group_name | default(omit) }}"
         global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}" # what global db cluster should be associated to
@@ -46,5 +45,5 @@
         db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name }}" # what cluster instance should be in
         db_instance_identifier: "{{ create_rds_global_cluster_replica_cluster_instance_name }}"
         region: "{{ create_rds_global_cluster_replica_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_enigne }}"
+        engine: "{{ create_rds_global_cluster_enigne  | default('aurora-postgresql')}}"
         db_instance_class: "{{ create_rds_global_cluster_instance_class }}"
