--- a/tests/integration/targets/test_create_rds_global_cluster/tasks/main.yml
+++ b/tests/integration/targets/test_create_rds_global_cluster/tasks/main.yml
@@ -21,7 +21,7 @@
         name: cloud.aws_ops.create_rds_global_cluster
       vars:
         create_rds_global_cluster_operation: create
-        create_rds_global_cluster_enigne: "{{ test_enigne }}"
+        create_rds_global_cluster_engine: "{{ test_engine }}"
         create_rds_global_cluster_engine_version: "{{ test_engine_version }}"
         create_rds_global_cluster_instance_class: "{{ test_instance_class }}"
         create_rds_global_cluster_username: "{{ test_username }}"
@@ -67,12 +67,12 @@
 
   always:
 
-    - name: create global db
+    - name: delete global db and other role infrastructure
       ansible.builtin.include_role:
         name: cloud.aws_ops.create_rds_global_cluster
       vars:
         create_rds_global_cluster_operation: delete
-        create_rds_global_cluster_enigne: "{{ test_enigne }}"
+        create_rds_global_cluster_engine: "{{ test_engine }}"
         create_rds_global_cluster_engine_version: "{{ test_engine_version }}"
         create_rds_global_cluster_instance_class: "{{ test_instance_class }}"
         create_rds_global_cluster_username: "{{ test_username }}"
