--- a/tests/integration/targets/test_create_rds_global_cluster/defaults/main.yml
+++ b/tests/integration/targets/test_create_rds_global_cluster/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-test_enigne: aurora-mysql
+test_engine: aurora-mysql
 test_engine_version: 5.7
 test_instance_class: db.r5.large
 test_username: testrdsusername
@@ -11,7 +11,7 @@ test_global_cluster_name: ansible-test-global-{{ tiny_prefix }}
 
 # Primary cluster parameters ================================
 test_primary_cluster_name: ansible-test-primary-{{ tiny_prefix }}
-test_primary_cluster_region: us-east-1
+test_primary_cluster_region: eu-central-1
 test_primary_cluster_instance_name: ansible-test-instance-primary-{{ tiny_prefix }}
 
 # Replica cluster parameters ================================
